smoke_test_output_2.txt
SyntaxError: D:\Coding\nebulla\e2e\smoke.spec.ts: Unterminated template. (1:3)

[0m[31m[1m>[22m[39m[90m 1 |[39m [32m``[39m[32m`[39m
 [90m   |[39m    [31m[1m^[22m[39m
 [90m 2 |[39m [32mimport { test, expect } from '@playwright/test';[39m
 [90m 3 |[39m [32m[39m
 [90m 4 |[39m [32mtest.describe('Smoke Suite', () => {[39m[0m

   at smoke.spec.ts:1

> 1 | ```
    |   ^
  2 | import { test, expect } from '@playwright/test';
  3 | 
  4 | test.describe('Smoke Suite', () => {

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K
To open last HTML report run:
[36m[39m
[36m  npx playwright show-report[39m
[36m[39m
